test/files/neg/case-class-23-unrelated-unapply.check
case-class-23-unrelated-unapply.scala:42: error: too many arguments for unapply pattern, maximum = 22
  val TwentyThree(a, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, b) = x
      ^
case-class-23-unrelated-unapply.scala:45: error: too many arguments for unapply pattern, maximum = 22
  val TwentyThree(a2, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, b2) = arr
      ^
2 errors
